solve layout issues

--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,8 @@ a:hover {
     display: grid;
     grid-template-rows: repeat(3, 1fr);
     height: 100vh;
+    max-width: 1200px;
+    margin: auto;
 }
 
 /* ICONS */
@@ -62,9 +64,11 @@ a:hover {
 
 .about-container {
     position: relative;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto 1fr;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 4rem;
+    max-width: 100vw;
 }
 
 .about-container:before {
@@ -81,19 +85,20 @@ a:hover {
 }
 
 .photo-with-name {
+    position: relative;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
 }
 
 .about-pic {
-    width: 300px;
-    height: 300px;
+    width: 350px;
+    height: 350px;
     object-fit: cover;
     z-index: 2;
     box-shadow: 0 0 10px var(--shadow-color);
     margin-top: 2rem;
-    margin-left: 4rem;
+
     position: relative;
 }
 
@@ -103,9 +108,8 @@ a:hover {
     color: var(--color-secondary);
     font-family: var(--fancy-font);
     z-index: 3;
-    position: relative;
-    top: 30%;
-    left: -50%;
+    position: absolute;
+    bottom: 0;
     text-shadow: 0 0 20px var(--shadow-color);
 }
 
@@ -113,11 +117,11 @@ a:hover {
     background-color: var(--color-secondary);
     padding: 2rem;
     box-shadow: 0 0 10px var(--shadow-color);
-    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 25vh;
+    width: 50%;
+    max-width: 600px;
     box-sizing: content-box;
 }
 
@@ -157,6 +161,8 @@ a:hover {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 2rem;
+    max-width: 1000px;
+    margin: auto;
 }
 
 .project {
@@ -165,11 +171,16 @@ a:hover {
 
 .project-screenshot {
     padding: 3.3rem;
+    width: 100%;
+    aspect-ratio: 1/1;
     text-align: center;
     font-family: var(--fancy-font);
     font-size: 2rem;
     background-color:rgb(165, 114, 207);
     color: var(--color-secondary);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .project-top-row {
@@ -199,7 +210,15 @@ a:hover {
     background-color: var(--color-primary);
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 4rem;
+    gap: 2rem;
+}
+
+.contact-left {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
 }
 
 .contact-head {
@@ -239,6 +258,10 @@ a:hover {
 }
 
 .contact-pic {
-    width: 450px;
+    width: 100%;
     height: auto;
+    max-width: 400px;
+    object-fit: cover;
 }
+
+/* MEDIA QUERIES */
